test/cases/compile_errors/reify_type_for_exhaustive_enum_with_non-integer_tag_type.zig
const Tag = @Enum(bool, .nonexhaustive, &.{}, &.{});
export fn entry() void {
    _ = @as(Tag, @enumFromInt(0));
}

// error
//
// :1:19: error: tag type must be an integer type
